--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -4,6 +4,10 @@
   "description": "Sample Vue.js app",
   "license": "MIT",
   "author": "{{ cookiecutter.author_name }}",
+  "repository": {
+    "url": "{{ cookiecutter.project_repo }}",
+    "type": "git"
+  },
   "dependencies": {
     "vue": "^2.6.11"
   },
