Added vue-cli toolchain to template project

--- a/{{cookiecutter.project_slug}}/tsconfig.json
+++ b/{{cookiecutter.project_slug}}/tsconfig.json
@@ -3,15 +3,22 @@
     "target": "es5",
     "module": "es6",
     "moduleResolution": "node",
-    "outDir": "build/script",
     "alwaysStrict": true,
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "allowSyntheticDefaultImports": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
   },
-  "files": [
-    "src/script/main.ts"
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "tests/**/*.ts",
+    "tests/**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
