--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -8,19 +8,19 @@
     "url": "{{ cookiecutter.project_repo }}",
     "type": "git"
   },
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit"
+  },
   "dependencies": {
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^5.1.1",
-    "ts-loader": "^6.2.1",
+    "@vue/cli-plugin-typescript": "~4.2.0",
+    "@vue/cli-service": "~4.2.0",
     "typescript": "^3.8.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
-  },
-  "scripts": {
-    "test": "echo \"No test specified\" && true",
-    "build-debug": "webpack --mode=development",
-    "build": "webpack --mode=production"
+    "vue-template-compiler": "^2.6.11"
   }
 }
